more consistency with admin buttons

--- a/blog/templates/blog/includes/super_buttons.html
+++ b/blog/templates/blog/includes/super_buttons.html
@@ -1,37 +1,32 @@
-{% block super_buttons %}
-    {% if user.is_superuser %}
+<div class="btn-group float-end">
+    <a class="btn btn-secondary" href="{{ post.get_absolute_update_url }}">
+        <i class="bi bi-pencil-square"></i> Edit
+    </a>
 
-        <div class="btn-group float-end">
-            <a class="btn btn-secondary" href="{{ post.get_absolute_update_url }}">
-                <i class="bi bi-pencil-square"></i> Edit
+    <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" id="postAdminDropdown-{{ post.id }}" data-bs-toggle="dropdown" aria-expanded="false">
+        <span class="visually-hidden">Toggle Dropdown</span>
+    </button>
+    <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="postAdminDropdown-{{ post.id }}">
+        {% if not post.published_date %}
+            <a class="dropdown-item" href="{{ post.get_absolute_publish_url }}">
+                <i class="bi bi-file-earmark-arrow-up"></i> Publish
             </a>
 
-            <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" id="postAdminDropdown-{{ post.id }}" data-bs-toggle="dropdown" aria-expanded="false">
-                <span class="visually-hidden">Toggle Dropdown</span>
-            </button>
-            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="postAdminDropdown">
-                {% if not post.published_date %}
-                    <a class="dropdown-item" href="{{ post.get_absolute_publish_url }}">
-                        <i class="bi bi-file-earmark-arrow-up"></i> Publish
-                    </a>
+            <a class="dropdown-item" href="{{ post.get_absolute_publish_withdrawn_url }}">
+                <i class="bi bi-file-earmark-lock"></i> Publish Withdrawn
+            </a>
 
-                    <a class="dropdown-item" href="{{ post.get_absolute_publish_withdrawn_url }}">
-                        <i class="bi bi-file-earmark-lock"></i> Publish Withdrawn
-                    </a>
+            <div class="dropdown-divider"></div>
+        {% endif %}
 
-                    <div class="dropdown-divider"></div>
-                {% endif %}
+        <a class="dropdown-item" href="{{ post.get_absolute_admin_update_url }}">
+            <i class="bi bi-pencil-square"></i> Edit in Admin
+        </a>
 
-                <a class="dropdown-item" href="{{ post.get_absolute_admin_update_url }}">
-                    <i class="bi bi-pencil-square"></i> Edit in Admin
-                </a>
+        <div class="dropdown-divider"></div>
 
-                <div class="dropdown-divider"></div>
-
-                <a class="dropdown-item" href="{{ post.get_absolute_delete_url }}">
-                    <i class="bi bi-trash"></i> Delete
-                </a>
-            </ul>
-        </div>
-    {% endif %}
-{% endblock super_buttons %}
+        <a class="dropdown-item" href="{{ post.get_absolute_delete_url }}">
+            <i class="bi bi-trash"></i> Delete
+        </a>
+    </ul>
+</div>
