--- a/blog/templates/blog/lists/category_list.html
+++ b/blog/templates/blog/lists/category_list.html
@@ -9,27 +9,32 @@
                 <div id="category-{{ cat.slug }}" class="card shadow h-100">
 
                     <div class="card-header">
-                        <span class="d-flex">
+                        <div class="d-flex">
                             <span class="col">
                                 <strong class="text-muted"><a class="text-muted" href="{% url 'blog:latest_category_post_feed' slug=cat.slug %}">Category #{{ cat.id }}</a></strong>
                                 <p class="mb-0 text-muted">Category Post Count: {% if user.is_superuser %}{{ cat.get_superuser_post_count_in_category }} | {% endif %}{{ cat.get_post_count_in_category }}</p>
                             </span>
-                            <span class="col-auto">
-                                {% block super_buttons %}
-                                    {% if user.is_superuser %}
-                                        <div class="float-end btn-group" role="group" aria-label="Edit Group">
-                                            <a class="btn btn-light" href="{% url 'blog:category_edit' slug=cat.slug %}">
-                                                <i class="bi bi-pencil-square"></i>
+                            {% if user.is_superuser %}
+                                <span class="col-auto">
+                                    {% block super_buttons %}
+                                        <div class="btn-group float-end">
+                                            <a class="btn btn-secondary" href="{{ cat.get_absolute_update_url }}">
+                                                <i class="bi bi-pencil-square"></i> Edit
                                             </a>
 
-                                            <a class="btn btn-danger" href="{% url 'admin:blog_category_change' object_id=cat.id %}">
-                                                <i class="bi bi-pencil-square"></i>
-                                            </a>
+                                            <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" id="categoryAdminDropdown-{{ cat.id }}" data-bs-toggle="dropdown" aria-expanded="false">
+                                                <span class="visually-hidden">Toggle Dropdown</span>
+                                            </button>
+                                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="categoryAdminDropdown-{{ cat.id }}">
+                                                <a class="dropdown-item" href="{{ cat.get_absolute_admin_update_url }}">
+                                                    <i class="bi bi-pencil-square"></i> Edit in Admin
+                                                </a>
+                                            </ul>
                                         </div>
-                                    {% endif %}
-                                {% endblock super_buttons %}
-                            </span>
-                        </span>
+                                    {% endblock super_buttons %}
+                                </span>
+                            {% endif %}
+                        </div>
                     </div>
                     <div class="card-body">
                         <h3 class="card-title">{{ cat.title }}</h3>
