--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -228,7 +228,7 @@
                     <div id="main_search" class="col d-none d-sm-block">
                         <form action="{{ search_url }}" class="search_form" method="get">
                             <div class="input-group">
-                                <input type="text" class="form-control" id="search" placeholder="Search" name="q"
+                                <input type="text" class="form-control" id="search" placeholder="{{ search_title }}" name="q"
                                     aria-label="search" aria-describedby="search">
                             </div>
                         </form>
