totally didn't remove the submit button by mistake lol

--- a/khoBlog/templates/account/edit_profile.html
+++ b/khoBlog/templates/account/edit_profile.html
@@ -172,6 +172,8 @@
                                 {% endfor %}
                             </div>
                         </div>
+
+                        <button type="submit" class="btn btn-primary">{{ title }}</button>
                     </form>
                 </div>
             </div>
