text consitency (link appeared weirldy)

--- a/khoBlog/static/khoBlog/css/_custom.scss
+++ b/khoBlog/static/khoBlog/css/_custom.scss
@@ -49,6 +49,7 @@ $font-family-monospace: $monospace;
 
     .cat-link {
         @include color('side-link');
+        font-weight: 400;
 
         &:hover {
             @include color('side-link');
