More changes with removed thing
Make sure to:
Fix side menus showing all kind of information even if post is somehow supposed to be hidden
Make sure nothing shows if you are in an removed category
same for series
Same for posts (should be ok)
Make DRYer shit cuz it's bad
Check if Managers can't be used in a better way

--- a/blog/templates/blog/archive_date_detail.html
+++ b/blog/templates/blog/archive_date_detail.html
@@ -1,5 +1,5 @@
 {% extends 'blog/post_detail.html' %}
 
 {% block page_top_title %}
-    [Archives] {{ post.title }}
+    {{ title }}
 {% endblock page_top_title %}
