--- a/blog/templates/blog/lists/post_category_list.html
+++ b/blog/templates/blog/lists/post_category_list.html
@@ -1,9 +1,13 @@
 {% extends 'blog/lists/post_list.html' %}
 
 {% block page_top_title %}
-    {% if not cats.withdrawn or cats.withdrawn and user.is_superuser %}
-        Posts in <b>{{ cats|capfirst }}</b> Category
+    {% if not cats.is_removed %}
+        {% if not cats.withdrawn or cats.withdrawn and user.is_superuser %}
+            Posts in <b>{{ cats|capfirst }}</b> Category
+        {% else %}
+            This category is Withdrawn
+        {% endif %}
     {% else %}
-        This category is Withdrawn
+        This category is Removed
     {% endif %}
 {% endblock page_top_title %}
