--- a/blog/templates/blog/lists/post_list.html
+++ b/blog/templates/blog/lists/post_list.html
@@ -79,9 +79,17 @@
                     {% if post.published_date %}
                         {% if post.was_published_recently %}
                             <span class="position-absolute top-0 start-100 translate-middle badge border border-light rounded-circle bg-success p-1" data-bs-toggle="tooltip" data-bs-placement="top" title="New Post"><span class="visually-hidden">New Post</span></span>
-                        {% elif post.withdrawn %}
-                            <span class="position-absolute top-0 start-100 translate-middle badge border border-light rounded-circle bg-danger p-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Withdrawn"><span class="visually-hidden">Withdrawn</span></span>
                         {% endif %}
+
+                        {% if post.published_date > now %}
+                            <span class="position-absolute top-0 start-100 translate-middle badge border border-light rounded-circle bg-warning p-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Scheduled"><span class="visually-hidden">Scheduled</span></span>
+                        {% endif %}
+                    {% else %}
+                        <span class="position-absolute top-0 start-100 translate-middle badge border border-light rounded-circle bg-info p-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Draft"><span class="visually-hidden">Draft</span></span>
+                    {% endif %}
+
+                    {% if post.withdrawn %}
+                        <span class="position-absolute top-0 start-100 translate-middle badge border border-light rounded-circle bg-danger p-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Withdrawn"><span class="visually-hidden">Withdrawn</span></span>
                     {% endif %}
 
                     <div class="card-header">
