--- a/khoBlog/templates/403.html
+++ b/khoBlog/templates/403.html
@@ -2,6 +2,10 @@
 {% load static %}
 {% load markdown_extra %}
 
+{% block title %}
+    Error 403 Permission Denied
+{% endblock title %}
+
 {% block page_top_title %}
     Error 403 Permission Denied
 {% endblock page_top_title %}
@@ -13,6 +17,8 @@
 {% endblock page_top_end %}
 
 {% block content_main %}
+    <br />
+
     <a class="btn btn-danger" href="{% url 'pages:kheee' %}">Error 403 Permission Denied</a>
 {% endblock content_main %}
 
