--- a/blog/templates/blog/base_post_card.html
+++ b/blog/templates/blog/base_post_card.html
@@ -1,6 +1,8 @@
 {% load markdown_extra read_time %}
 
-<div id="post-{{ post.slug }}" class="card mb-2">
+{% block card_div %}
+    <div id="post-{{ post.slug }}" class="card shadow">
+{% endblock card_div %}
     {% if post.published_date %}
         {% if post.was_published_recently %}
             <span class="position-absolute top-0 start-100 translate-middle badge border border-light rounded-circle bg-success p-1" data-bs-toggle="tooltip" data-bs-placement="top" title="New Post"><span class="visually-hidden">New Post</span></span>
@@ -18,69 +20,87 @@
     {% endif %}
 
     <div class="card-header">
-        <span class="d-flex">
-            <span class="col">
-                <h2>Post #{{ post.id }}</h2>
-            </span>
-            <span class="col-auto mx-2">
-                <h4><span class="badge bg-secondary d-flex justify-content-center" data-bs-toggle="tooltip" data-bs-placement="top" title="{{ post.get_language_display }}">{{ post.language }}</span></h4>
-            </span>
-            <span class="col">
-                {% block super_buttons %}
-                    {% if user.is_superuser %}
-                        {% include 'blog/includes/super_buttons.html' %}
+        {% block card_header %}
+            <div class="d-flex">
+                <span class="col">
+                    {% if post.get_featured_cat %}
+                        <strong><a class="cat-link" href="{{ post.get_featured_cat.category.get_absolute_url }}">{{ post.featured_cat_title|capfirst }}</a></strong>
+                    {% else %}
+                        <strong><a class="cat-link" href="{{ post.categories.first.get_absolute_url }}">{{ post.categories.first|capfirst }}</a></strong>
                     {% endif %}
-                {% endblock super_buttons %}
-            </span>
-        </span>
+                    <p class="mb-0 text-small text-muted">
+                        {% if post.body %}
+                            {{ post.body|readtime }}
+                        {% else %}
+                            A while
+                        {% endif %}
+                    </p>
+                </span>
+                <span class="col-auto mx-2">
+                    <span class="badge bg-secondary d-flex justify-content-center" data-bs-toggle="tooltip" data-bs-placement="top" title="{{ post.get_language_display }}">{{ post.language }}</span>
+                </span>
+                <span class="col">
+                    {% block super_buttons %}
+                        {% if user.is_superuser %}
+                            {% include 'blog/includes/super_buttons.html' %}
+                        {% endif %}
+                    {% endblock super_buttons %}
+                </span>
+            </div>
+        {% endblock card_header %}
     </div>
 
     <div class="card-body">
-        {% if series %}
-            <div class="card">
-                <div class="card-header">
-                    <strong>Series: <a href="{% url 'blog:post_series_list' slug=post.series.slug %}">{{ post.series }}</a></strong>{% if post.series.description %} - {{ post.series.description }}{% endif %}
+        {% block card_body %}
+            {% if series %}
+                <div class="card shadow">
+                    <div class="card-header">
+                        <strong>Series: <a href="{% url 'blog:post_series_list' slug=post.series.slug %}">{{ post.series }}</a></strong>{% if post.series.description %} - {{ post.series.description }}{% endif %}
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        {% for e in series %}
+                            <li class="list-group-item"><a href="{% url 'blog:post_detail' slug=e.slug %}">Part #{{ forloop.counter }}: {{ e }}</a></li>
+                        {% endfor %}
+                    </ul>
                 </div>
-                <ul class="list-group list-group-flush">
-                    {% for e in series %}
-                        <li class="list-group-item"><a href="{% url 'blog:post_detail' slug=e.slug %}">Part #{{ forloop.counter }}: {{ e }}</a></li>
-                    {% endfor %}
-                </ul>
+
+                <hr />
+            {% endif %}
+
+            <h2 class="card-title">{{ title }}</h2>
+            <div>
+                {% include 'blog/includes/post_dates.html' %}
+                <p class="mb-0 text-small text-muted">
+                    {% if not body %}
+                        {{ post.body|readtime }}
+                    {% else %}
+                        A while
+                    {% endif %}
+                </p>
             </div>
 
-            <hr />
-        {% endif %}
-
-        <h2 class="card-title">{{ title }}</h2>
-        <div>
-            {% include 'blog/includes/post_dates.html' %}
-            <p class="mb-0 text-small text-muted">
-                {% if not body %}
-                    {{ post.body|readtime }}
-                {% else %}
-                    A while
-                {% endif %}
-            </p>
-        </div>
-
-        {% if post.post_image %}
-            <img src="{{ post.post_image.url }}" alt="Post image" />
-        {% endif %}
-
-        <div class="card-text">
-            {% if body %}
-                {% for content in body %}
-                    {{ content.body|formatted_markdown|safe }}
-                    {% if content.post_body_image %}
-                        <img src="{{ content.post_body_image.url }}" alt="{{ content.post_body_image_alt }}">
-                    {% endif %}
-                {% endfor %}
-            {% else %}
-                {{ post.body|formatted_markdown|safe }}
+            {% if post.post_image %}
+                <img src="{{ post.post_image.url }}" alt="Post image" />
             {% endif %}
-        </div>
-        {% if post.url_to_article %}
-            <a class="card-link" href="{{ post.url_to_article }}">{{ post.url_to_article_title }}</a>
-        {% endif %}
+
+            <div class="card-text">
+                {% if body %}
+                    {% for content in body %}
+                        {{ content.body|formatted_markdown|safe }}
+                        {% if content.post_body_image %}
+                            <img src="{{ content.post_body_image.url }}" alt="{{ content.post_body_image_alt }}">
+                        {% endif %}
+                    {% endfor %}
+                {% else %}
+                    {{ post.body|formatted_markdown|safe }}
+                {% endif %}
+            </div>
+            {% if post.url_to_article %}
+                <a class="card-link" href="{{ post.url_to_article }}">{{ post.url_to_article_title }}</a>
+            {% endif %}
+        {% endblock card_body %}
     </div>
+
+    {% block card_footer %}
+    {% endblock card_footer %}
 </div>
