fixed auth card fucking up the layout

--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -234,7 +234,7 @@
                         </form>
                     </div>
 
-                    <div class="col-auto">
+                    <div class="col-auto mb-2">
                         {% block page_top_end %}
                             <a class="btn btn-primary float-end" href="{% url 'blog:search' %}">
                                 Search
